--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,4 +11,4 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
 Imports: DAISIE
-Remotes: rsetienne/DAISIE@cont_fix
+Remotes: rsetienne/DAISIE
