--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,23 @@
 Package: ContinentalTesting
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Test continental DAISIE MLE model
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Authors@R: person(
+             given = "Joshua W.", 
+             family = "Lambert", 
+             email = "j.w.lambert@rug.nl", 
+             role = c("aut", "cre", "cph"),
+           comment = c(ORCID = "https://orcid.org/0000-0001-5218-3046")
+           )
+Description: A set of functions and scripts to analyse the continental 
+    (non-oceanic) DAISIE model of island biogeography. The package contains
+    analysis and plotting scripts to determine the precision, reliability and 
+    bias of inferring vicariant species from phylogenetic island community data.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
-Imports: DAISIE
-Remotes: rsetienne/DAISIE@develop
+Depends:
+  R (>= 3.5.0)
+Imports:
+  DAISIE
