--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,11 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 Depends:
-  R (>= 3.5.0)
+  R (>= 4.1.0)
 Imports:
-  DAISIE
+  DAISIE,
+  ggplot2
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
