--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,5 @@ export(any_nonendemics)
 export(calc_param_diffs)
 export(plot_loglik_dist)
 export(plot_param_diffs)
+export(post_process_daisie_results)
 export(sim_continental_island)
