--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,5 @@ export(calc_param_diffs)
 export(plot_loglik_dist)
 export(plot_param_diffs)
 export(post_process_daisie_results)
+export(post_process_empirical_analysis)
 export(sim_continental_island)
