added post_process_vicariance_results function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,5 @@ export(plot_loglik_dist)
 export(plot_param_diffs)
 export(post_process_daisie_results)
 export(post_process_empirical_analysis)
+export(post_process_vicariance_results)
 export(sim_continental_island)
