--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.1
+Roxygen: list(markdown = TRUE)
 Depends:
   R (>= 4.1.0)
 Imports:
