--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -22,9 +22,11 @@ jobs:
           use-public-rspm: true
 
       - uses: r-lib/actions/setup-renv@v2
-        with:
-          extra-packages: any::covr
-          needs: coverage
+
+      - name: Install covr
+        run: |
+          install.packages("covr")
+        shell: Rscript {0}
 
       - name: Test coverage
         run: |
