added plot_vicariance_loglik_diff function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(any_nonendemics)
 export(calc_param_diffs)
 export(plot_loglik_dist)
 export(plot_param_diffs)
+export(plot_vicariance_loglik_diff)
 export(plot_vicariance_scatter)
 export(post_process_daisie_results)
 export(post_process_empirical_analysis)
